overflow at top in mobile fixed

--- a/static/global.css
+++ b/static/global.css
@@ -28,10 +28,17 @@
 }
 
 body {
+    /* width: 100dvw;
+    height: 100dvh;
+    display: flex;
+    flex-direction: column; */
+    
     width: 100dvw;
     height: 100dvh;
     display: flex;
-    flex-direction: column;
+    /* align-items: center; */
+    justify-content: center;
+
     /* background: url(background.svg);
     background-size: cover;
     background-position: sticky;
@@ -63,10 +70,14 @@ article {
 
 @media (max-width: 670px) {
     body {
-        width: 100dvw;
+        /* width: 100dvw;
         height: 100%;
-        min-height: 100dvh;
+        min-height: 100dvh; */
         /* background-position: top center; */
+        width: 100dvw;
+        margin: 0 auto;
+        padding: 0.5rem;
+        margin-top: 5rem;
     }
     main {
         height: auto;
